Fix keyboard covering text element

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ html {
 
 body {
   height: 100%;
-  background: url('../img/texture.png') no-repeat center center fixed;
+  background: url('../img/texture.png');
   background-size: cover;
   font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
   color: white;
@@ -46,6 +46,7 @@ h4 {
 
 form {
   text-align: center;
+  margin-bottom: 3em;
 }
 
 .signup {
